kubernetes/worker-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app-deploy
  namespace: olumoko-voting-app
  labels:
    name: worker-app-deploy
    app: demo-voting-app
spec:
  replicas: 4
  selector:
    matchLabels:
      name: worker-app-pod
      app: demo-voting-app
  template:
    metadata:
      name: worker-app-pod
      labels:
        name: worker-app-pod
        app: demo-voting-app
    spec:
      containers:
        - name: worker-app
          image: kodekloud/examplevotingapp_worker:v1
