kubernetes/result-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-app-deploy
  namespace: olumoko-voting-app
  labels:
    name: result-app-deploy
    app: demo-voting-app
spec:
  replicas:
  selector:
    matchLabels:
      name: result-app-pod
      app: demo-voting-app
  template:
    metadata:
      name: result-app-pod
      labels:
        name: result-app-pod
        app: demo-voting-app
    spec:
      containers:
        - name: result-app
          image: kodekloud/examplevotingapp_result:v1
          ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: olumoko-voting-app
  labels:
     name: result-service
     app: demo-voting-app
spec:
   type: NodePort
   ports:
     - port: 80
       targetPort: 80
   selector:
     name: result-app-pod
     app: demo-voting-app
